# BirdNET-Pi

./: -  .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  <MagicMock name='ConfigFileParser().load_config().database.path' id='4634505104'>  <MagicMock name='ConfigFileParser().load_config().database.path' id='4721063376'>  <MagicMock name='ConfigFileParser().load_config().database.path' id='4776192912'>  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  asset_result.json  babel.cfg  birdnet.conf-defaults  comprehensive_project_plan.yaml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  filter-large-files-chunked.sh  filter-large-files.sh  newinstaller.sh  pyproject.toml  requirements.txt  start.sh  test_ebird_queries.py  version.md
.ast-grep/rules/: docstring-pep257-multiline-format.yml  no-function-local-imports.yml  no-if-main-imports.yml  test-docstring-should.yml  test-mock-must-have-spec.yml  test-must-use-path-resolver.yml  test-patch-must-have-spec.yml  test-patch-object-must-have-spec.yml  test-prefer-app-with-temp-data.yml
.ast-grep/test/: no-function-local-imports-test.yml  no-if-main-imports-test.yml  test-docstring-should-test.yml  test-mock-must-have-spec-test.yml  test-must-use-path-resolver-test.yml  test-patch-must-have-spec-test.yml  test-patch-object-must-have-spec-test.yml  test-prefer-app-with-temp-data-test.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ci/: check_coverage.py
.github/workflows/: ci.yml  docker-release.yml
.semgrep/rules/: no-function-local-imports.yaml  test-docstring-should.yaml
alembic/: env.py
alembic/versions/: 3afaf6ab75f4_baseline_schema_birdnet_pi_2_0_0a.py
config_templates/: Caddyfile  Caddyfile.template  birdnet_pi_config.yaml  birdnet_pi_config.yaml.template  birdnetpi.yaml  container-init.sh  journald.conf  pulseaudio_daemon.conf.j2  pulseaudio_default.pa.j2  redis.conf  redis.conf.j2  supervisor-wrapper.py  supervisord.conf
config_templates/supervisor/: supervisord.conf
data/database/: avibase_database.db
data/models/: test_model.txt
docs/: BOOT_CONFIG.md  PHP_MIGRATION.md  RELEASE_CHECKLIST.md  ebird-confidence-system.md  performance-profiling.md
docs/api/: ebird-filtering.md  multilingual-service.md
docs/en/: boot-config.md  docker-installation.md  epaper-display.md  index.md  language-configuration.md  sbc-installation.md
docs/i18n/: language-configuration-consolidation.md  language-configuration.md  species-translation.md  test-validation-report.md
etc/: birdnet_pi_config.yaml
homepage/: style.css  views.php
homepage/static/: Chart.bundle.js  chartjs-plugin-trendline.min.js
install/: cleanup.sh  devices.py  flash_sdcard.py  flasher.tcss  flasher_tui.py  install.sh  patch_waveshare_orangepi.py  setup_app.py  test_epaper.py  ui_progress.py  ui_whiptail.py
legacy-files/: Caddyfile.template  green_bootstrap.css.template
legacy-files/scripts/: adminer-fr.php
locales/: README.md  messages.pot
model/: labels_lang.txt
scripts/: advanced.php  analyze.py  birdnet_analysis.sh  birdnet_log.sh  birdnet_recording.sh  birdnetpi_request.php  birdweather_request.php  cleanup.sh  clear_all_data.sh  config.php  createdb.sh  custom_recording.sh  daily_plot.py  disk_check.sh  disk_usage.sh  dump_logs.sh  email_template2  exclude_list.php  extra_info.sh  extract_new_birdsounds.sh  history.php  include_list.php  install_birdnet.sh  install_config.sh  install_deps.sh  install_language_label.sh  install_language_label_nm.sh  install_noip2.sh  install_services.sh  install_zram_service.sh  livestream.sh  manage_translations.py  most_recent.sh  overview.php  play.php  plotly_streamlit.py  print_diagnostic_info.sh  remove_php_components.sh  restart_services.sh  server.py  (+18 more)
scripts/utils/: notifications.py  parse_settings.py
src/: analysis_manager_wrapper.py  audio_manager_wrapper.py  data_manager_wrapper.py  log_manager_wrapper.py  notification_service_wrapper.py  reporting_dashboard.py  reporting_manager_wrapper.py  service_manager_wrapper.py  system_monitor_wrapper.py  update_manager_wrapper.py
src/birdnetpi/: __init__.py  data_manager_wrapper.py  log_manager_wrapper.py  notification_service_wrapper.py  system_monitor_wrapper.py
src/managers/: analysis_manager.py  audio_manager.py  data_manager.py  data_preparation_manager.py  database_manager.py  log_manager.py  plotting_manager.py  reporting_manager.py  service_manager.py  update_manager.py
src/models/: analysis_status.py  audio_metadata.py  birdnet_config.py  client_args.py  database_models.py  network_config.py  service_status.py
src/services/: analysis_client_service.py  database_manager.py  database_service.py  detection_event_publisher.py  file_manager.py  notification_service.py
src/utils/: config_file_parser.py  file_path_resolver.py  species_list_utils.py  system_utils.py
src/web/: main.py
templates/: green_bootstrap.css  phpsysinfo.ini  tmux.conf
tests/: auth_helpers.py  conftest.py  test_apprise_notifications.py  test_audio_formats.py  test_database_fixtures.py  test_detection_buffering_integration.py  test_e2e.py  test_integration.py  test_integration_simple.py  test_ioc_fixture_verification.py  test_settings_parse.py
tests/cli/: test_asset_installer.py  test_generate_dummy_data.py  test_ioc_data_processor.py  test_pulseaudio_setup.py  test_pulseaudio_tool.py  test_release.py  test_setup_system.py
tests/config_templates/: test_supervisord_config.py
tests/daemons/: test_audio_analysis_daemon.py  test_audio_capture_daemon.py
tests/e2e/: conftest.py  test_e2e.py  test_profiling_e2e.py  test_settings_e2e.py
tests/integration/: conftest.py  test_analytics_manager_integration.py  test_app_startup_integration.py  test_config_permissions.py  test_container_integration.py  test_data_manager_integration.py  test_detection_buffering_integration.py  test_detections_api_routes_integration.py  test_detections_api_routes_integration_simple.py  test_development_warning_banner.py  test_ebird_detection_filtering_integration.py  test_i18n_integration.py  (+13 more)
(+747 files in other folders)
