[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "ast-grep-cli>=0.39.2",
  "httpx>=0.28.1",
  "pandas-stubs",
  "pyleak>=0.1.14",
  "pyright>=1.1.390",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=6.2.1",
  "pytest-mock==3.7.0",
  "pytest>=7.1.2",
  "ruff>=0.12.5",
  "types-decorator>=5.2.0.20250324",
  "types-paho-mqtt",
  "types-pillow>=10.2.0.20240822",
  "types-psutil",
  "types-pytz",
  "types-requests>=2.32.4.20250611",
  "types-setuptools",
  "types-sqlalchemy>=1.4.53.38",
  "types-tqdm",
  "types-tzlocal",
  "types-urllib3>=1.26.25.14"
]

[project]
name = "birdnet-pi"
version = "2.0.0"
description = "The next generation of real-time, acoustic bird classification."
authors = [
  {name = "Matthew de Verteuil", email = "mverteuil@users.noreply.github.com"},
  {name = "Patrick McGuire", email = "mcguirepr89@users.noreply.github.com"}
]
requires-python = "==3.11.*"
dependencies = [
  "pip",
  "wheel",
  "setuptools",
  "altair<5",
  "apprise==1.2.1",
  "astral",
  "babel>=2.14.0",
  "blinker>=1.9.0",
  "click>=8.2.1",
  "colorama==0.4.4",
  "dependency-injector==4.48.1",
  "fastapi",
  "httpx>=0.28.1",
  "librosa",
  "numpy<2",
  "openpyxl>=3.1.5",
  "paho-mqtt",
  "pandas",
  "plotly",
  "psutil>=7.0.0",
  "pydub>=0.25.1",
  "pymemcache>=4.0.0",
  "python-multipart",
  "pytz",
  "seaborn",
  "sounddevice>=0.5.2",
  "sqladmin>=0.21.0",
  "sqlalchemy",
  "structlog>=25.4.0",
  "suntime",
  "tensorflow>=2.19.0 ; platform_machine != 'aarch64' or sys_platform == 'darwin'",
  "tflite-runtime>=2.14.0 ; platform_machine == 'aarch64' and sys_platform == 'linux'",
  "tqdm>=4.67.1",
  "tzlocal",
  "uvicorn",
  "websockets>=15.0.1",
  "wtforms>=3.1.2"
]

[project.scripts]
audio-analysis-daemon = "birdnetpi.daemons.audio_analysis_daemon:main"
audio-capture-daemon = "birdnetpi.daemons.audio_capture_daemon:main"
audio-websocket-daemon = "birdnetpi.daemons.audio_websocket_daemon:main"
configure-pulseaudio = "birdnetpi.cli.configure_pulseaudio:main"
generate-dummy-data = "birdnetpi.cli.generate_dummy_data:main"
install-assets = "birdnetpi.cli.install_assets:main"
manage-releases = "birdnetpi.cli.manage_releases:main"
manage-translations = "birdnetpi.cli.manage_translations:main"
spectrogram-websocket-daemon = "birdnetpi.daemons.spectrogram_websocket_daemon:main"

[tool.coverage.run]
source = ["src/birdnetpi"]
omit = [
  "tests/*",
  "*/dependency_injector/*",
  "/private/var/folders/*",
  "/tmp/*",
  "*/pytest-of-*/*"
]

[tool.pyright]
exclude = ["**/build", "**/__pycache__"]
include = ["src", "tests"]
pythonVersion = "3.11"
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
markers = [
  "expensive",
  "no_leaks: detect asyncio task leaks, thread leaks, and event loop blocking"
]
testpaths = ["tests"]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "A", # Builtin shadowing
  "ANN", # Annoyance (missing type annotations)
  "B", # Bugbear
  "C", # Complexity
  "D", # Docstrings (optional, but good for clarity)
  "E", # Error
  "F", # Pyflakes
  "I", # Isort
  "N", # Naming
  "RUF", # Ruff-specific rules
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W" # Warning
]
ignore = [
  "ANN204", # Missing return type annotation for special method `__init__`
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in public method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start on the second line
  "D400", # First line should end with a period
  "D406", # Section name should end with a colon
  "D407", # Missing dashed underline after section header
  "D413", # Missing blank line after last section
  "D415" # First line should end with a period, question mark, or exclamation point
]
unfixable = ["TID252"] # Disallow `from ... import *`

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
